src/features/StreetcodePage/Streetcode.styles.scss
@use "@sass/mixins/_utils.mixins.scss" as mut;
@use "@sass/_utils.functions.scss" as f;

$bgImg: '@assets/images/streetcode-card/background.png';

.streetcodeContainer {
    width: 100%;
    overflow: clip;
    @include mut.rem-padded($top: 82px);
    @include mut.bg-image($bgImg, auto);

    overflow-anchor: none;
}
.sticky{
    position: sticky;
    display: flex;
    z-index: 4;
    bottom: f.pxToRem(50px);
    justify-content: flex-end;
}
.sticky-content {
    position: absolute;
    bottom: f.pxToRem(5px);
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    gap: f.pxToRem(10px);
}
.dimmed {
    @include mut.sized(100%, 5875px);
}

@media screen and (max-width: 1024px) {
    .streetcodeContainer {
        @include mut.rem-padded($top: 64px);
    }
}

@media screen and (max-width: 680px) {
    .streetcodeContainer{
        background-image: none;
    }   
}

.loader-container{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #F4F4F4;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
    pointer-events: none;

    .spinner{
        z-index: 1001;
    }

}

